test/oscar/compiler/errors/assignMismatch.oscar
def main() => unit = {
  int x = "1";
}